added swagger documentation